# celo

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
algoperf/: README.md
algoperf/submissions/celo/: submission.py  theta.state
algoperf/submissions/celo_adam/: submission.py  theta.state
algoperf/submissions/velo_4000/: submission.py
celo/: benchmark_runtime.py  eval_training.py  factory.py  gradient_learner.py  tasks.py  test.py  train.py  utils.py
celo/optimizers/: adafac_mlp_lopt.py  celo.py  celo2.py  celo_adam.py  nn_adam.py  rnn_mlp_lopt.py  velo.py
